<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ut01.ex04.Ut01Ex04Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header1"
        android:layout_marginTop="@dimen/size_margin"
        android:layout_margin="@dimen/size_margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sectionHeader1"
            android:textSize="@dimen/size_text_small"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/verTodo"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header2"
        android:layout_marginTop="@dimen/size_margin"
        android:layout_margin="@dimen/size_margin_small"
        android:layout_below="@id/header1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sectionHeader2"
            android:textSize="@dimen/size_text_small"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/verTodo"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header3"
        android:layout_marginTop="@dimen/size_margin"
        android:layout_margin="@dimen/size_margin_small"
        android:layout_below="@id/header2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sectionHeader2"
            android:textSize="@dimen/size_text_small"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/verTodo"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            />
    </LinearLayout>



</RelativeLayout>